Replaced the usage of Set with SortedSet for the column sort